[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
eyre = "0.6.12"
google-sheets4 = "5.0.4"
rand = "0.8.5"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "rt", "macros"] }
toml = "0.8.13"
tower-http = { version = "0.5.2", features = ["cors"] }
